--- a/client/src/App.css
+++ b/client/src/App.css
@@ -575,3 +575,17 @@ button {
     padding: 0.3rem 0.4rem;
   }
 }
+
+th, td {
+  border: 1px solid black;
+
+    padding: 25px;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.tran_header{
+  font-size: 3rem;
+  color: #0077b5;
+  margin: 2rem auto;
+}
