--- a/client/src/App.css
+++ b/client/src/App.css
@@ -577,15 +577,24 @@ button {
 }
 
 th, td {
-  border: 1px solid black;
-
-    padding: 25px;
+    border: 1px solid black;
+    padding: 20px;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.2rem;
 }
 
 .tran_header{
-  font-size: 3rem;
+  font-size: 2rem;
   color: #0077b5;
   margin: 2rem auto;
+}
+
+
+.portfolio_container{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.holding_stocks{
+  margin-right: 20px;
 }
