add color in Portfolio

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -598,3 +598,14 @@ th, td {
 .holding_stocks{
   margin-right: 20px;
 }
+
+.green{
+  color:green;
+}
+
+.red{
+  color:red;
+}
+.grey{
+  color:grey
+}
