--- a/client/src/App.css
+++ b/client/src/App.css
@@ -592,7 +592,7 @@ th, td {
 
 .portfolio_container{
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .holding_stocks{
