--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,7 +38,6 @@ img {
 .container {
   max-width: 1100px;
   margin: auto;
-  overflow: hidden;
   padding: 0 2rem;
   margin-top: 6rem;
   margin-bottom: 3rem;
@@ -578,9 +577,9 @@ button {
 
 th, td {
     border: 1px solid black;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .tran_header{
@@ -589,14 +588,24 @@ th, td {
   margin: 2rem auto;
 }
 
+.stock_value{
+  font-size: 1.5rem;
+  color: black;
+  margin: 2rem auto;
+}
+
 
 .portfolio_container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: block;
+  width: 50%
 }
+
 .holding_stocks{
-  margin-right: 20px;
+  display: block;
+}
+
+.tran_table{
+
 }
 
 .green{
