--- a/client/src/App.css
+++ b/client/src/App.css
@@ -618,3 +618,33 @@ th, td {
 .grey{
   color:grey
 }
+
+.buy_tag{
+    font-family: "Source Sans Pro", "Arial", sans-serif;
+    text-decoration: none;
+    text-align: center;
+    font-size: 19px;
+    color: white;
+  
+    background-color: #4CAF50;
+    border-radius: 20px;
+    margin: 0 10px 0 10px;
+    padding: 10px 20px 10px 20px;
+    opacity: 0.8;
+    width: 100px;
+}
+
+.sell_tag{
+    font-family: "Source Sans Pro", "Arial", sans-serif;
+    text-decoration: none;
+    text-align: center;
+    font-size: 19px;
+    color: white;
+  
+    background-color: #f44336;
+    border-radius: 20px;
+    margin: 0 10px 0 10px;
+    padding: 10px 20px 10px 20px;
+    opacity: 0.8;
+    width: 100px;
+}
