--- a/client/src/App.css
+++ b/client/src/App.css
@@ -125,6 +125,8 @@ img {
   margin: 3rem 0;
 }
 
+/* --------------------------------------------------------- */
+/* For general button */
 .btn {
   display: inline-block;
   background: var(--light-color);
@@ -233,7 +235,8 @@ img {
   height: 100%;
 }
 
-/* Forms */
+/* --------------------------------------------------------- */
+/* For Form component */
 .form .form-group {
   margin: 1.2rem 0;
 }
@@ -262,42 +265,8 @@ button {
   font: inherit;
 }
 
-.form .social-input {
-  display: flex;
-}
-
-.form .social-input i {
-  padding: 0.5rem;
-  width: 4rem;
-}
-
-.form .social-input i.fa-twitter {
-  color: #38a1f3;
-}
-.form .social-input i.fa-facebook {
-  color: #3b5998;
-}
-.form .social-input i.fa-instagram {
-  color: #3f729b;
-}
-.form .social-input i.fa-youtube {
-  color: #c4302b;
-}
-.form .social-input i.fa-linkedin {
-  color: #0077b5;
-}
-
-.table th,
-.table td {
-  padding: 1rem;
-  text-align: left;
-}
-
-.table th {
-  background: var(--light-color);
-}
-
-/* Navbar */
+/* --------------------------------------------------------- */
+/* For Navbar component */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -329,7 +298,8 @@ button {
   margin-right: 0.6rem;
 }
 
-/* Landing Page */
+/* --------------------------------------------------------- */
+/* For Landing component */
 .landing {
   position: relative;
   background: url('./img/stock.jpg') no-repeat center center/cover;
@@ -346,145 +316,6 @@ button {
   align-items: center;
   justify-content: center;
   text-align: center;
-}
-
-/* Profiles Page */
-.profile {
-  display: grid;
-  grid-template-columns: 2fr 4fr 2fr;
-  align-items: center;
-  grid-gap: 2rem;
-  padding: 1rem;
-  line-height: 1.8;
-  margin-bottom: 1rem;
-}
-
-/* Profile Page */
-.profile-grid {
-  display: grid;
-  grid-template-areas:
-    'top top'
-    'about about'
-    'exp edu'
-    'github github';
-  grid-gap: 1rem;
-}
-
-.profile-top {
-  grid-area: top;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.profile-top img {
-  width: 250px;
-}
-
-.profile-top .icons a {
-  color: #fff;
-  margin: 0 0.3rem;
-}
-
-.profile-top .icons a:hover {
-  color: var(--dark-color);
-}
-
-.profile-about {
-  grid-area: about;
-  text-align: center;
-}
-
-.profile-about .skills {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.profile-exp {
-  grid-area: exp;
-}
-
-.profile-edu {
-  grid-area: edu;
-}
-
-.profile-exp h2,
-.profile-edu h2 {
-  margin-bottom: 1rem;
-}
-
-.profile-exp > div,
-.profile-edu > div {
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: #ccc 1px dotted;
-}
-
-.profile-exp > div:last-child,
-.profile-edu > div:last-child {
-  border: 0;
-}
-
-.profile-exp p,
-.profile-edu p {
-  margin: 0.5rem 0;
-}
-
-.profile-github {
-  grid-area: github;
-}
-
-.profile-github .repo {
-  display: flex;
-}
-
-.profile-github .repo > div:first-child {
-  flex: 7;
-  flex-basis: 70%;
-}
-
-.profile-github > div:last-child {
-  flex: 3;
-  flex-basis: 20%;
-}
-
-/* Posts Page */
-.post-form .post-form-header {
-  background: var(--primary-color);
-  padding: 0.5rem;
-}
-
-.post {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-gap: 2rem;
-  align-items: center;
-}
-
-.post > div:first-child {
-  text-align: center;
-}
-
-.post img {
-  width: 100px;
-}
-
-.post .comment-count {
-  background: var(--light-color);
-  color: var(--primary-color);
-  padding: 0.1rem 0.2rem;
-  border-radius: 5px;
-  font-size: 0.8rem;
-}
-
-.post .post-date {
-  color: #aaa;
-  font-size: 0.8rem;
-  margin-bottom: 0.5rem;
 }
 
 /* Mobile Styles */
@@ -528,51 +359,19 @@ button {
   .navbar .welcome {
     display: none;
   }
+}
 
-  /* Profiles Page */
-  .profile {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
+/* --------------------------------------------------------- */
+/* For general table */
 
-  .profile ul {
-    display: none;
-  }
+.table th,
+.table td {
+  padding: 1rem;
+  text-align: left;
+}
 
-  /* Profile Page */
-
-  .profile-top img,
-  .profile img {
-    width: 200px;
-    margin: auto;
-  }
-
-  .profile-grid {
-    grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
-  }
-
-  .profile-about .skills {
-    flex-direction: column;
-  }
-
-  .dash-buttons a {
-    display: block;
-    width: 100%;
-    margin-bottom: 0.2rem;
-  }
-
-  .post {
-    grid-template-columns: 1fr;
-  }
-  .post a,
-  .post button {
-    padding: 0.3rem 0.4rem;
-  }
+.table th {
+  background: var(--light-color);
 }
 
 th, td {
@@ -582,39 +381,15 @@ th, td {
     font-size: 1rem;
 }
 
-.tran_header{
-  font-size: 2rem;
-  color: #0077b5;
-  margin: 1rem;
-}
-
-.stock_value{
-  font-size: 1.5rem;
-  color: black;
-  margin: 2rem auto;
-}
-
-
+/* --------------------------------------------------------- */
+/* For Portfolio component */
 .portfolio_container{
   display: block;
   width: 50%
 }
 
-.holding_stocks{
-  display: block;
-}
-
-.green{
-  color:green;
-}
-
-.red{
-  color:red;
-}
-.grey{
-  color:grey
-}
-
+/* --------------------------------------------------------- */
+/* For NavSub component */
 .buy_tag{
     font-family: "Source Sans Pro", "Arial", sans-serif;
     text-decoration: none;
@@ -680,20 +455,31 @@ th, td {
   width: 100px;
 }
 
+/* --------------------------------------------------------- */
+/* for Stock component */
+.holding_stocks{
+  display: block;
+}
 
-/* refresh button */
-.total_and_refresh{
+.tran_header{
+  font-size: 2rem;
+  color: #0077b5;
+  margin: 1rem;
+}
+
+.total_container{
   display:flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items:center;
 }
 
-.refresh_tag{
+/* refresh button */
+#refresh_button{
   font-family: "Source Sans Pro", "Arial", sans-serif;
   text-decoration: none;
   text-align: center;
-  font-size: 19px;
+  font-size: 16px;
   color: white;
 
   background-color: #2e2d2d;
@@ -704,18 +490,18 @@ th, td {
   width: 100px;
 }
 
-.refresh_tag:hover{
+#refresh_button:hover{
   color: white;
   background-color: #008CBA;
 }
 
 
-/* refresh spinner */
-#spinner:not([hidden]) {
+/* refreshing spinner */
+#refreshing_spinner:not([hidden]) {
   display: flex;
 }
 
-#spinner::after {
+#refreshing_spinner::after {
   content: "";
   width: 30px;
   height: 30px;
@@ -734,3 +520,82 @@ th, td {
     transform: rotate(360deg);
   }
 }
+
+.green{
+  color:green;
+}
+
+.red{
+  color:red;
+}
+.grey{
+  color:grey
+}
+
+/* --------------------------------------------------------- */
+/* For Buy component */
+/* Buy and sell operation */
+.operation_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items:flex-start;
+  flex-wrap: nowrap;
+}
+
+/* for buy operation */
+#buyForm{
+  margin-left: 15px;
+  min-width:400px;
+}
+
+/* check-price button and spinner */
+#check_price_container{
+  display: flex;
+  align-items: center;
+}
+
+#check_price_button{
+  background-color: #cac9c9; 
+  border: none;
+  color: white;
+  padding: 7px 8px 7px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 20px;
+  margin-right: 10px;
+}
+
+#check_price_button:hover{
+  background-color: #008CBA;
+}
+
+/* for query table */
+#query_table{
+  margin-top: 20px;
+  margin-left: 100px;
+  border-spacing: 0px;
+}
+
+.query_table_th{
+  padding:5px 80px 5px 80px
+}
+
+/* check price button */
+#checking_spinner:not([hidden]) {
+  display: flex;
+}
+
+#checking_spinner::after {
+  content: "";
+  width: 22px;
+  height: 22px;
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #f25a41;
+  border-radius: 100%;
+  will-change: transform;
+  animation: spin 1s infinite linear
+}
+
