--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,7 @@
   padding: 0;
 }
 
+/* Additional Text Styles */
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
@@ -34,7 +35,7 @@ img {
   width: 100%;
 }
 
-/* Text Styles*/
+/* Additional Text Styles */
 .x-large {
   font-size: 4rem;
   line-height: 1.2;
@@ -117,7 +118,7 @@ img {
 }
 
 /* --------------------------------------------------------- */
-/* For general button */
+/* For buttons */
 .btn {
   display: inline-block;
   background: var(--light-color);
@@ -145,12 +146,24 @@ img {
   color: var(--primary-color);
 }
 
-/* Utilities */
+/* --------------------------------------------------------- */
+/* For all pages container */
 .container {
-  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 1rem;
   margin-top: 4.5rem;
   margin-bottom: 3rem;
+}
+
+.auth-container{
+  padding-top: 5rem;
+}
+
+.auth-header{
+  width: 100%;
+  text-align: center;
 }
 
 .alert-container{
