--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,7 +50,8 @@ img {
 
 .lead {
   font-size: 1.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.3rem;
+  padding: 0.2rem;
 }
 
 .text-center {
@@ -275,6 +276,10 @@ img {
   margin:4rem 1rem 1rem 1rem;
   display: flex;
   justify-content: flex-end;
+  position: fixed;
+  z-index: 1;
+  top:0.5rem;
+  right:0.5rem;
 }
 
 .alert {
@@ -283,7 +288,6 @@ img {
   padding: 0.5rem 4rem;
   margin: 0.5rem 0.5rem;
   opacity: 0.9;
-  z-index: 1;
 }
 
 /* --------------------------------------------------------- */
@@ -301,19 +305,30 @@ img {
 /* --------------------------------------------------------- */
 /* For auth pages */
 .auth-container{
+  width: 100%;
   margin:1rem;
   padding: 2rem 2rem 2rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .auth-header{
-  min-width: 550px;
+  width:60%;
   text-align: center;
 }
 
 /* --------------------------------------------------------- */
 /* For Form component */
+
+.form {
+  width:60%;
+  padding:5px;
+  min-width: 400px;
+  max-width: 550px;
+}
+
 .form .form-group {
-  min-width: 550px;
   margin: 1.2rem 0;
 }
 
@@ -350,120 +365,10 @@ button {
 }
 
 
-/* Mobile Styles */
-@media (max-width: 700px) {
-  .container {
-    margin-top: 8rem;
-  }
-
-  .hide-sm {
-    display: none;
-  }
-
-  /* Text Styles */
-  .x-large {
-    font-size: 3rem;
-  }
-
-  .large {
-    font-size: 2rem;
-  }
-
-  .lead {
-    font-size: 1rem;
-  }
-
-  /* Navbar */
-  .navbar {
-    display: block;
-    text-align: center;
-  }
-
-  .navbar ul {
-    text-align: center;
-    justify-content: center;
-  }
-
-  .navbar h1 {
-    margin-bottom: 1rem;
-  }
-
-  .navbar .welcome {
-    display: none;
-  }
-}
-
-/* <NEW>--------------------------------------------------------- */
-/* For NavSub component */
-.buy_tag{
-    font-family: "Source Sans Pro", "Arial", sans-serif;
-    text-decoration: none;
-    text-align: center;
-    font-size: 19px;
-    color: white;
-  
-    background-color:#4CAF50;
-    border-radius: 20px;
-    margin: 0 10px 0 10px;
-    padding: 10px 20px 10px 20px;
-    opacity: 0.8;
-    width: 100px;
-}
-
-.sell_tag{
-    font-family: "Source Sans Pro", "Arial", sans-serif;
-    text-decoration: none;
-    text-align: center;
-    font-size: 19px;
-    color: white;
-  
-    background-color:#f44336;
-    border-radius: 20px;
-    margin: 0 10px 0 10px;
-    padding: 10px 20px 10px 20px;
-    opacity: 0.8;
-    width: 100px;
-}
-
-.disable_tag{
-  font-family: "Source Sans Pro", "Arial", sans-serif;
-  text-decoration: none;
-  text-align: center;
-  font-size: 19px;
-  color: white;
-
-  background-color: #cac9c9;
-  border-radius: 20px;
-  margin: 0 10px 0 10px;
-  padding: 10px 20px 10px 20px;
-  opacity: 0.8;
-  width: 100px;
-}
-
-.disable_tag:hover{
-  color: white;
-  background-color: #008CBA;
-}
-
-.normal_tag{
-  font-family: "Source Sans Pro", "Arial", sans-serif;
-  text-decoration: none;
-  text-align: center;
-  font-size: 19px;
-  color: white;
-
-  background-color: #2e2d2d;
-  border-radius: 20px;
-  margin: 0 10px 0 10px;
-  padding: 10px 20px 10px 20px;
-  opacity: 0.8;
-  width: 100px;
-}
-
 /* <NEW>--------------------------------------------------------- */
 /* for Portfolio page component */
 .portfolio-container{
-  width:85%;
+  width:90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -476,7 +381,6 @@ button {
 
 .total_container{
   display:flex;
-  flex-direction: row;
   justify-content: flex-start;
   align-items:center;
 }
@@ -489,7 +393,7 @@ button {
 }
 
 .tran_sub_header{
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #0077b5;
   margin: 0.5rem;
 }
@@ -498,17 +402,14 @@ button {
   margin:0.5rem;
   border-collapse: collapse;
   width:100%;
-  font-size: 5%;
-}
-
-.table th {
-  background: var(--light-color);
+  font-size: 1rem;
+  /* overflow-x: auto; */
 }
 
 th, td {
     border: 1px solid black;
     text-align: center;
-    padding:2px;
+    padding:5px;
 }
 
 /* refresh button */
@@ -570,6 +471,73 @@ th, td {
 }
 
 /* <NEW>--------------------------------------------------------- */
+/* For NavSub component */
+.buy_tag{
+  font-family: "Source Sans Pro", "Arial", sans-serif;
+  text-decoration: none;
+  text-align: center;
+  font-size: 19px;
+  color: white;
+
+  background-color:#4CAF50;
+  border-radius: 20px;
+  margin: 0 10px 0 10px;
+  padding: 10px 20px 10px 20px;
+  opacity: 0.8;
+  width: 100px;
+}
+
+.sell_tag{
+  font-family: "Source Sans Pro", "Arial", sans-serif;
+  text-decoration: none;
+  text-align: center;
+  font-size: 19px;
+  color: white;
+
+  background-color:#f44336;
+  border-radius: 20px;
+  margin: 0 10px 0 10px;
+  padding: 10px 20px 10px 20px;
+  opacity: 0.8;
+  width: 100px;
+}
+
+.disable_tag{
+  font-family: "Source Sans Pro", "Arial", sans-serif;
+  text-decoration: none;
+  text-align: center;
+  font-size: 19px;
+  color: white;
+
+  background-color: #cac9c9;
+  border-radius: 20px;
+  margin: 0 10px 0 10px;
+  padding: 10px 20px 10px 20px;
+  opacity: 0.8;
+  width: 100px;
+}
+
+.disable_tag:hover{
+  color: white;
+  background-color: #008CBA;
+}
+
+.normal_tag{
+  font-family: "Source Sans Pro", "Arial", sans-serif;
+  text-decoration: none;
+  text-align: center;
+  font-size: 19px;
+  color: white;
+
+  background-color: #2e2d2d;
+  border-radius: 20px;
+  margin: 0 10px 0 10px;
+  padding: 10px 20px 10px 20px;
+  opacity: 0.8;
+  width: 100px;
+}
+
+/* <NEW>--------------------------------------------------------- */
 /* For Buy component */
 /* Buy and sell operation */
 .operation_container{
@@ -591,6 +559,7 @@ th, td {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  width:100px;
 }
 
 /* check-price button and spinner */
@@ -617,7 +586,7 @@ th, td {
 }
 
 /* for query table */
-#query_table{
+/* #query_table{
   margin-top: 20px;
   margin-left: 100px;
   border-spacing: 0px;
@@ -625,7 +594,7 @@ th, td {
 
 .query_table_th{
   padding:5px 80px 5px 80px
-}
+} */
 
 /* check price button */
 #checking_spinner:not([hidden]) {
@@ -652,5 +621,239 @@ th, td {
 
 .transaction_content{
   display: block;
+}
+
+
+/* //-------------------------------- */
+/* //-------------------------------- */
+/* //-------------------------------- */
+/* Mobile Styles */
+@media (max-width: 920px) {
+  .container {
+    margin-top: 6.8rem;
+  }
+
+  .alert-container{
+    top:3rem;
+    right:0.2rem;
+  }
+  
+  .alert {
+    padding: 0.2rem 0.5rem;
+    margin: 0.2rem 0.2rem;
+    opacity: 0.9;
+    font-size: 0.8rem;
+  }
+
+  .hide-sm {
+    display: none;
+  }
+
+  /* Text Styles */
+  .x-large {
+    font-size: 3rem;
+  }
+
+  .large {
+    font-size: 2rem;
+  }
+
+  .lead {
+    font-size: 1rem;
+  }
+
+  /* Navbar */
+  .navbar {
+    display: block;
+    text-align: center;
+  }
+
+  .navbar ul {
+    text-align: center;
+    justify-content: center;
+  }
+
+  .navbar h1 {
+    margin-bottom: 1rem;
+  }
+
+  .navbar .welcome {
+    display: none;
+  }
+
+  .holding_stocks{
+    margin:2px;
+    padding:2px;
+  }
+
+  .tran_table{
+    margin:0.2rem 0.2rem 1.2rem 0.2rem;
+    border-collapse: collapse;
+    width:100%;
+    font-size: 0.2rem;
+    overflow-x: auto;
+  }
+
+  .tran_header{
+    font-size: 1.5rem;
+    color: #0077b5;
+    margin: 0.2rem;
+    border-bottom: 1px solid
+  }
+  
+  .tran_sub_header{
+    font-size: 0.7rem;
+    color: #0077b5;
+    margin: 0.1rem;
+  }
+  
+  th, td {
+      padding:1px;
+  }
+
+  #refresh_button{
+    font-size: 8px;
+    border-radius: 20px;
+    margin: 0 5px 0 5px;
+    padding: 3px 5px 2px 5px;
+    opacity: 0.8;
+    width: 45px;
+  }
+
+  #refreshing_spinner::after {
+    content: "";
+    width: 12px;
+    height: 12px;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #f25a41;
+    border-radius: 100%;
+    will-change: transform;
+    animation: spin 1s infinite linear
+  }
+
+  #refresh_again_text{
+    font-size: 0.6rem;
+  }
+
+  .buy_tag{
+    font-size: 8px;
+    border-radius: 20px;
+    margin: 0 5px 0 5px;
+    padding: 5px 8px 5px 8px;
+    opacity: 0.8;
+    width: 45px;
+  }
+  
+  .sell_tag{
+    font-size: 8px;
+    border-radius: 20px;
+    margin: 0 5px 0 5px;
+    padding: 5px 8px 5px 8px;
+    opacity: 0.8;
+    width: 45px;
+  }
+  
+  .disable_tag{
+    font-size: 8px;
+    border-radius: 20px;
+    margin: 0 5px 0 5px;
+    padding: 5px 8px 5px 8px;
+    opacity: 0.8;
+    width: 45px;
+  }
+
+  .operation_container{
+    margin:2px;
+    padding: 2px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  #buyForm{
+    margin:2px;
+    padding:2px;
+    width:30%;
+  }
+
+  .operate-form-group{
+    width:100%;
+  }
+
+  .operate-form-group input[type='text'],
+  .operate-form-group label
+  .operate-form-group textarea {
+    display: block;
+    width: 100%;
+    padding: 0.4rem;
+    font-size: 0.6rem;
+    border: 1px solid #ccc;
+    margin: 0.2rem 0;
+  }
+
+  .operate-btn{
+    margin: 10px 2px 0 2px;
+    padding: 3px 3px 3px 3px;
+    width:30%;
+  }
+
+  #buyForm input[type='submit'],
+    button {
+      font-size: 0.6rem;
+    }
+
+  #check_price_container{
+    margin: 0.2rem 0.3rem;
+    padding: 0.2rem 0.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width:40%;
+  }
+  
+  #check_price_button{
+    background-color: #cac9c9; 
+    border: none;
+    color: white;
+    padding: 7px 8px 7px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    border-radius: 20px;
+    margin-right: 10px;
+  }
+
+  #check_price_button_spinner{
+    display: flex;
+  }
+
+  #check_symbol_again_text{
+    font-size: 0.5rem;
+  }
+
+  #checking_spinner::after {
+    content: "";
+    width: 12px;
+    height: 12px;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #f25a41;
+    border-radius: 100%;
+    will-change: transform;
+    animation: spin 1s infinite linear
+  }
+
+  .operate_table{
+    margin:0.2rem 0.2rem 1.2rem 0.2rem;
+    border-collapse: collapse;
+    font-size: 0.2rem;
+    overflow-x: auto;
+    width:30%;
+  }
+
+  .operate_table th{
+    padding:2px;
+    width:1px;
+  }
 }
 
