--- a/client/src/App.css
+++ b/client/src/App.css
@@ -415,8 +415,14 @@ button {
   padding: 0.6rem;
 }
 
+.update-time{
+  font-size: 1rem;
+  padding: 0.2rem 1rem;
+  color:black;
+}
+
 /* refresh button */
-#refresh_button{
+#refreshing-button{
   font-family: "Source Sans Pro", "Arial", sans-serif;
   text-decoration: none;
   text-align: center;
@@ -431,25 +437,31 @@ button {
   opacity: 0.8;
 }
 
-#refresh_button:hover{
+#refreshing-button:hover{
   color: white;
   background-color: #008CBA;
 }
 
 /* refreshing spinner */
-#refreshing_spinner:not([hidden]) {
+#refreshing-spinner:not([hidden]) {
   display: flex;
 }
 
-#refreshing_spinner::after {
+#refreshing-spinner::after {
   content: "";
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border: 8px solid #f3f3f3;
   border-top: 8px solid #f25a41;
   border-radius: 100%;
   will-change: transform;
-  animation: spin 1s infinite linear
+  animation: spin 1s infinite linear;
+  margin-left:0.5rem;
+}
+
+#refresh-again-text{
+  font-size: 1rem;
+  margin-left:0.2rem;
 }
 
 @keyframes spin {
@@ -546,25 +558,50 @@ button {
 
 /* check-price button and spinner */
 .check-price-container{
-  margin: 0.7rem 0.7rem;
+  margin: 0.5rem 0.7rem;
+  display: flex;
+  flex-direction: column;
 }
 
-/* check price button */
-#checking_spinner:not([hidden]) {
+.button-spinner-container{
+  display: flex;
+  justify-content: flex-start;
+
+  margin:0.2rem 0.5rem;
+  font-size: 0.8rem;
+}
+
+#try-again-text{
+  margin:0.2rem 0.5rem;
+  padding:2px;
+}
+
+#empty-symbol-text{
+  margin:0.2rem 0.5rem;
+  padding:2px;
+}
+
+/* check price spinner */
+#checking-spinner:not([hidden]) {
   display: flex;
 }
 
-#checking_spinner::after {
+#checking-spinner::after {
   content: "";
-  width: 22px;
-  height: 22px;
+  width: 15px;
+  height: 15px;
   border: 8px solid #f3f3f3;
   border-top: 8px solid #f25a41;
   border-radius: 100%;
   will-change: transform;
-  animation: spin 1s infinite linear
+  animation: spin 1s infinite linear;
+  margin-left:1rem;
 }
 
+/* check price data */
+.price-data-container{
+  margin:0.5rem 0.8rem;
+}
 
 
 /* <NEW>--------------------------------------------------------- */
@@ -649,21 +686,28 @@ button {
     padding: 0.2rem;
   }
 
-  #refresh_button{
+  .update-time{
+    font-size: 0.5rem;
+    padding: 0.1rem 0.4rem;
+    color:black;
+  }
+
+  #refreshing-button{
     width: 50px;
     margin: 0 5px 0 5px;
     padding: 3px 5px 2px 5px;
     font-size: 0.5rem;
   }
 
-  #refreshing_spinner::after {
+  #refreshing-spinner::after {
     width: 12px;
     height: 12px;
     border: 4px solid #f3f3f3;
     border-top: 4px solid #f25a41;
+    margin-left:0.5rem;
   }
 
-  #refresh_again_text{
+  #refresh-again-text{
     font-size: 0.6rem;
   }
 
@@ -697,26 +741,35 @@ button {
 
   /* check-price button and spinner */
   .check-price-container{
-    margin: 0.2rem 0.2rem;
+    margin: 0.1rem 0.1rem;
   }
 
-  #check_price_button_spinner{
-    display: flex;
+  .button-spinner-container{
+    margin:0.1rem 0.2rem;
+    font-size: 0.2rem;
+  }
+  
+  #try-again-text{
+    margin:0.1rem 0.5rem;
+    padding:1px;
+  }
+  
+  #empty-symbol-text{
+    margin:0.1rem 0.5rem;
+    padding:1px;
   }
 
-  #check_symbol_again_text{
-    font-size: 0.5rem;
-  }
-
-  #checking_spinner::after {
-    content: "";
+  #checking-spinner::after {
     width: 12px;
     height: 12px;
     border: 4px solid #f3f3f3;
     border-top: 4px solid #f25a41;
-    border-radius: 100%;
-    will-change: transform;
-    animation: spin 1s infinite linear
+    margin-left:0.5rem;
+  }
+
+  .price-data-container{
+    margin:0.1rem 0.6rem;
+    font-size: 0.4rem;
   }
 }
 
