--- a/client/src/App.css
+++ b/client/src/App.css
@@ -231,6 +231,7 @@ ul {
 .alert-container{
   margin:4rem 1rem 1rem 1rem;
   display: flex;
+  flex-direction: column;
   justify-content: flex-end;
   position: fixed;
   z-index: 1;
