--- a/client/src/App.css
+++ b/client/src/App.css
@@ -315,44 +315,6 @@ button {
   text-align: center
 }
 
-/* --------------------------------------------------------- */
-/* For Form component */
-
-/* .form {
-  width:60%;
-  padding:5px;
-  min-width: 400px;
-  max-width: 550px;
-}
-
-.form .form-group {
-  margin: 1.2rem 0;
-}
-
-.form .form-text {
-  display: block;
-  margin-top: 0.3rem;
-  color: #888;
-}
-
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
-.form select,
-.form textarea {
-  display: block;
-  width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
-  border: 1px solid #ccc;
-}
-
-.form input[type='submit'],
-button {
-  font: inherit;
-} */
-
 /* <NEW> --------------------------------------------------------- */
 /* <B container class>  */
 /* <Share> for Portfolio & Transaction pages component */
@@ -609,7 +571,7 @@ button {
 /* <NEW>--------------------------------------------------------- */
 /* <NEW>--------------------------------------------------------- */
 /* <NEW>--------------------------------------------------------- */
-/* Mobile Styles */
+/* Mobile Styles < 900px > */
 @media (max-width: 900px) {
   .container {
     margin-top: 6.8rem;
@@ -772,6 +734,219 @@ button {
   .price-data-container{
     margin:0.1rem 0.6rem;
     font-size: 0.4rem;
+  }
+}
+
+/* <NEW>--------------------------------------------------------- */
+/* <NEW>--------------------------------------------------------- */
+/* <NEW>--------------------------------------------------------- */
+/* Mobile Styles < 900px > */
+
+@media (max-width: 400px) {
+  .hide-for-mobile{
+    display: none;
+  }
+
+  .container {
+    padding: 1.5rem 0.2rem;
+    margin: 4.5rem 0.2rem 0.2rem 0.2rem;
+
+    margin-top: 7rem;
+  }
+
+  .alert-container{
+    margin:8rem 0.2rem 0.5rem 0.5rem;
+    top:0.5rem;
+    right:0.3rem;
+  }
+  
+  .alert {
+    min-width: 5rem;
+    padding: 0.3rem 0.3rem;
+    margin: 0.1rem 0.1rem;
+    opacity: 0.9;
+    font-size: 0.8rem;
+  }
+
+  .btn {
+    width:5rem;
+    margin: 0.3rem;
+    padding: 0.4rem;
+    font-size: .8rem;
+  }
+
+  /* Text Styles */
+  .x-large {
+    font-size: 1.8rem;
+  }
+
+  .large {
+    font-size: 1rem;
+  }
+
+  .lead {
+    font-size: 1rem;
+  }
+
+  /* Navbar */
+  .navbar {
+    display: block;
+    text-align: center;
+  }
+
+  .navbar ul {
+    text-align: center;
+    justify-content: center;
+  }
+
+  .navbar h1 {
+    margin-bottom: 1rem;
+  }
+
+  .navbar .welcome {
+    display: none;
+  }
+
+  /* --------------------------------------------------------- */
+/* For auth pages <B container class>  */
+.auth-header{
+  font-size: 2rem;
+}
+
+.auth-form{
+  min-width: 280px;
+}
+
+.auth-form-group {
+  margin: 2rem 0;
+}
+
+.auth-form-group input[type='submit'],
+button {
+  font: inherit;
+}
+
+.auth-button{
+  font-size: 1.2rem;
+}
+  /* <Share> for Portfolio & Transaction pages component */
+  .record-header{
+    font-size: 1.2rem;
+    margin: 0.2rem;
+  }
+
+  .record-table{
+    margin:0.2rem 0.2rem 0.5rem 0.2rem;
+    width:98%;
+    font-size: 0.6rem;
+  }
+
+  .record-table th, td {
+    padding:3px;
+  }
+
+  /* for Portfolio page component < 900px  >*/
+  .tran-sub-header{
+    font-size: 0.8rem;
+    padding: 0.2rem;
+  }
+
+  .update-time{
+    font-size: 0.7rem;
+    padding: 0.1rem 0.4rem;
+    color:black;
+  }
+
+  #refreshing-button{
+    width: 50px;
+    margin: 0 5px 0 5px;
+    padding: 3px 5px 2px 5px;
+    font-size: 0.5rem;
+  }
+
+  #refreshing-spinner::after {
+    width: 12px;
+    height: 12px;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #f25a41;
+    margin-left:0.3rem;
+  }
+
+  #refresh-again-text{
+    font-size: 0.5rem;
+  }
+
+  /* For NavSub component < 400px  > */
+  .operations-nav-buttons{
+    display: flex;
+    justify-content: space-between;
+  }
+  .operation-nav-tag{
+    margin:0.1rem 0.4rem;
+    font-size: 0.8rem;
+    width:30%;
+  }
+
+  /* For operation component < 400px > */
+  /* Buy and sell operation */
+  .operations-content{
+    margin-top:0.8rem;
+  }
+
+  .oper-form-container{
+    width:45%;
+    margin: 0.1rem 0.3rem;
+  }
+
+  .oper-form input[type='text'],
+  .oper-form label
+  .oper-form textarea {
+    font-size: 0.8rem;
+    margin: 0.4rem 0.1rem;
+  }
+
+  .place-btn{
+    width:100%;
+    margin:1rem 0;
+    padding:0.1rem;
+    font-size: 0.8rem;
+  }
+
+  /* check-price button and spinner */
+  .check-price-container{
+    margin: 0.1rem 0.1rem;
+  }
+
+  .button-spinner-container{
+    margin:0.1rem 0.2rem;
+    font-size: 0.2rem;
+  }
+
+  #check-price-button{
+    width:100px;
+  }
+  
+  #try-again-text{
+    margin:0.1rem 0.5rem;
+    padding:1px;
+  }
+  
+  #empty-symbol-text{
+    margin:0.1rem 0.5rem;
+    padding:1px;
+  }
+
+  #checking-spinner::after {
+    width: 12px;
+    height: 12px;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #f25a41;
+    margin-left:0.5rem;
+  }
+
+  .price-data-container{
+    margin:0.3rem 1rem;
+    font-size: 0.75rem;
   }
 }
 
