--- a/client/src/App.css
+++ b/client/src/App.css
@@ -530,6 +530,28 @@ button {
   font-size: 1rem;
 }
 
+.operation-button-spinner {
+  display: flex;
+  align-items: center;
+}
+
+/* operation spinner */
+#operation-spinner:not([hidden]) {
+  display: flex;
+}
+
+#operation-spinner::after {
+  content: '';
+  width: 15px;
+  height: 15px;
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #f25a41;
+  border-radius: 100%;
+  will-change: transform;
+  animation: spin 1s infinite linear;
+  margin-left: 1rem;
+}
+
 /* check-price button and spinner */
 .check-price-container {
   margin: 0.6rem 0.7rem;
