--- a/client/src/components/layout/Admin/styles.css
+++ b/client/src/components/layout/Admin/styles.css
@@ -46,6 +46,7 @@
   width: 5rem;
   color: white;
   border: none;
+  border-radius: 20px;
 }
 
 .btn-normal {
@@ -64,11 +65,47 @@
   background-color: lightgray;
 }
 
+.btn-create-user {
+  font-family: 'Source Sans Pro', 'Arial', sans-serif;
+  text-decoration: none;
+  text-align: center;
+  opacity: 0.8;
+  color: white;
+  border-radius: 20px;
+
+  margin-left: 2rem;
+  font-size: 1rem;
+  width: 120px;
+
+  border: none;
+}
+
 .admin-table-input {
   font-size: 1.2rem;
   width: 7rem;
 }
 
 .admin-form {
-  width: 30%;
+  width: 100%;
+}
+
+.admin-form-container {
+  width: 40%;
+
+  margin: 0.5rem 0.5rem;
+  padding-left: 0.5rem;
+  margin-bottom: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.checkbox-inline {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-label {
+  margin-right: 1rem;
 }
